--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 <span class="l">12: </span>
 <span class="l">13: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">let</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">company</span> <span class="o">=</span> <span class="s">&quot;Metaintellect vl. Kornelije Sajler&quot;</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">let</span> <span class="i">company</span> <span class="o">=</span> <span class="s">&quot;Metaintellect vl. Kornelije Sajler&quot;</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">descritpion</span> <span class="o">=</span>  <span class="s">&quot;&quot;&quot;</span>
+<span class="k">let</span> <span class="i">descritpion</span> <span class="o">=</span>  <span class="s">&quot;&quot;&quot;</span>
 <span class="s">- Software development.</span>
 <span class="s">- Cloud infrastructure.</span>
 <span class="s">- Software and requirements consulting.</span>
 <span class="s">&quot;&quot;&quot;</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">contact</span> <span class="o">=</span> [
+<span class="k">let</span> <span class="i">contact</span> <span class="o">=</span> [
     (<span class="s">&quot;mobile&quot;</span>, <span class="s">&quot;+385 97 666 9357&quot;</span>)
     (<span class="s">&quot;email&quot;</span>, <span class="s">&quot;ks@metaintellect.com&quot;</span>)
     (<span class="s">&quot;address&quot;</span>, <span class="s">&quot;Humski put 14, Rijeka, Croatia&quot;</span>)
