Added slides source and output links.

--- a/fs-lang-slides/index.html
+++ b/fs-lang-slides/index.html
@@ -577,7 +577,14 @@ Lacking of Visual Studio support (as C#/node.js/C++ have)
 <h3>Real life examples</h3>
 </section>
 <section >
-<h3>Questions</h3>
+<h3>Questions?!</h3>
+</section>
+<section >
+<h3>Slides</h3>
+<ul>
+<li><a href="https://github.com/xajler/fsharp-lang-slides">source</a></li>
+<li><a href="http://metaintellect.com/fs-lang-slides/#/">output</a></li>
+</ul>
 </section>
 
 
