--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 ]
 
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">contact</span> <span class="o">=</span> [
-    (<span class="s">&quot;mobile&quot;</span>, <span class="s">&quot;+385 97 666 9357&quot;</span>)
     (<span class="s">&quot;email&quot;</span>, <span class="s">&quot;ks@metaintellect.com&quot;</span>)
-    (<span class="s">&quot;address&quot;</span>, <span class="s">&quot;Humski put 14, Rijeka, Croatia&quot;</span>)
+    (<span class="s">&quot;address&quot;</span>, <span class="s">&quot;Rijeka, Croatia&quot;</span>)
 ]
 </code></pre></td>
 </tr>
