--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <span class="l">12: </span>
 <span class="l">13: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">let</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">company</span> <span class="o">=</span> <span class="s">&quot;Metaintellect vl. Kornelije Sajler&quot;</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">let</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">company</span> <span class="o">=</span> <span class="s">&quot;Metaintellect d.o.o.&quot;</span>
 
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">services</span> <span class="o">=</span> [
   <span class="s">&quot;Software development&quot;</span>
